[package]
name = "ocaml-rust-parser-generator"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
byteorder = "1.4.3"
proc-macro2 = { version = "1.0.27", features = ["span-locations"] }
syn = { version = "1.0.72", features = ["full"] }
quote = "1.0.9"
ocaml = "0.22.0"
